--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "json-rest-api",
-  "version": "0.0.0",
-  "description": "A lightweight REST API that receives and responds to JSON HTTP requests, supports all verbs. Very simple.",
+  "version": "0.0.1",
+  "description": "A simple lightweight REST API that receives and responds to JSON HTTP requests, supports all verbs. Very simple.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/mocha --reporter list"
   },
   "repository": {
     "type": "git",
     "url": "git://github.com/stdarg/json-rest-api.git"
   },
   "keywords": [
+    "simple",
     "REST",
     "HTTP",
     "JSON",
@@ -22,12 +23,13 @@
   "bugs": {
     "url": "https://github.com/stdarg/json-rest-api/issues"
   },
-  "dependendcies": {
+  "dependencies": {
     "async-err": "~0.0.0",
     "debug": "~0.7.2",
     "is2": "~0.0.5"
   },
   "devDependencies": {
-    "mocha": "~1.13.0"
+    "mocha": "~1.13.0",
+    "request": "~2.27.0"
   }
 }
